# LocalMusic

./: .eslintrc.json  .gitignore  LocalMusic_PRD.md  README.md  package-lock.json  package.json  server_logs.txt  server_logs_v2.txt  turbo.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml
apps/api/: Dockerfile  package.json  scratch_print_routes.ts
apps/api/media/: disk_files.txt
apps/api/scratch/: audit_paths.ts  check_404.ts  check_cover.js  check_db.ts  check_id.js  check_tasks.ts  check_track.js  full_db_dump.json  heal_library.ts
apps/api/src/: app.ts  deep_audit.ts  fix_urls.ts  rebuild_search.ts  restore_library.ts  server.ts
apps/api/src/db/: client.ts
apps/api/src/plugins/: db.ts  sockets.ts  swagger.ts
apps/api/src/routes/: admin.ts  artists.ts  auth.ts  library.ts  music.ts  playlists.ts  search.ts  tracks.ts  users.ts
apps/api/src/scripts/: clean_emoji_dirs.ts  fix_extensions.ts  force_extensions.ts  heal_paths.ts  path_flatten_heal.ts  reindex.ts  reindex_metadata.ts  repair-storage.ts  resume_ingestion.ts  universal_fix.ts  (+1 more)
apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  player.tsx
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
infra/: docker-compose.yml
local-music/apps/api/: README.md
scratch/: deep_audit.ts  test_filename.py
temp_spotiflac/: .gitignore  README.md  launcher.py  pyproject.toml
temp_spotiflac/SpotiFLAC/: SpotiFLAC.py  amazonDL.py  check_update.py  deezerDL.py  getMetadata.py  progress.py  qobuzDL.py  spotidownloaderDL.py  tidalDL.py  youtubeDL.py
(+55 files in other folders)
